# EncryptX

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: check.yml
encryptx-backend/: Cargo.toml  DOCS.md  Dockerfile
encryptx-backend/src/: lib.rs  main.rs
encryptx-backend/src/cli/: mod.rs
encryptx-backend/src/crypto/: mod.rs
encryptx-backend/tests/: api.hurl  cli.rs
encryptx-frontend/: Dockerfile  eslint.config.mjs  example.env  package-lock.json  package.json
encryptx-frontend/src/app/: globals.css  layout.tsx  page.tsx
encryptx-frontend/src/app/(pages)/decrypt/: page.tsx
encryptx-frontend/src/app/(pages)/encrypt/: page.tsx
encryptx-frontend/src/app/api/status/: route.ts
encryptx-frontend/src/app/components/forms/: decrypt-form.tsx  encrypt-form.tsx
encryptx-frontend/src/app/components/sections/: cta-section.tsx  features-section.tsx  hero-section.tsx  how-it-works-section.tsx
encryptx-frontend/src/app/layout/: footer.tsx  navigation.tsx
encryptx-frontend/src/app/types/: index.ts
encryptx-frontend/src/app/utils/: backend-keep-alive.tsx  index.ts  status-helper.tsx
