[package]
name = "encryptx-backend"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.9.1"
serde = { version = "1.0.219",  features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
zeroize = { version = "1.8.1",  features = ["derive"] }
