[package]
name = "encryptx-backend"
version = "1.5.0"
edition = "2024"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
dotenvy = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
zeroize = { version = "1.5", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
dhat = "0.3"
zstd = "0.13.3"

[profile.release]
debug = true

[dev-dependencies]
tempfile = "3"
dhat = "0.3"

[features]
dhat-heap = []
